=head1 NAME

Changes - List of significant changes to Devel::NYTProf

(As of $Date$ $Revision$)

=cut

=head2 Changes in Devel::NYTProf 4.06 (svn r1406) 30th Nov 2010

  Fixed risk of nytprofhtml failure due to over-long filenames RT#62319

  Improved handling of Class::MOP/Moose generated methods.
  Improved handling of embedded filenames, e.g., "(eval N)[$path]"
  Updated and clarified usecputime=1 docs.
  Updated tests for (expected) new functionality in Sub::Name.
  Updated tests for changes in perl 5.13.x.

  Added special handling for the perl built-in accept()
    Effectively the clock stops ticking while in accept().
    This makes profiles of pure-perl web servers more useful.
  Added --no-mergeevals option to nytprofhtml.
  Added "If Statement and Subroutine Timings Don't Match" and
    "If Headline Subroutine Timings Don't Match the Called Subs"
    sections to the DATA COLLECTION AND INTERPRETATION docs.
  Added note to the docs re profiling applications that use Coro.

=head2 Changes in Devel::NYTProf 4.05 (svn 1359) 15th Sept 2010

  Fixed tests to work with a new optimization in perl 5.13.4.
  Fixed handling of negative values for subroutine line ranges
    (that may be added to %DB::sub by buggy software). 
  Fixed handling of negative times from unstable clocks
    that caused spikes in statement times.
  Fixed risk of bad line numbers hanging report generation.

=head2 Changes in Devel::NYTProf 4.04 (svn 1332) 9th July 2010

  Profile now reports presence of the slow regex match vars ($& $' $`).
  The (cumulative inclusive) recursion time measured for subs that are involved
    in recursion is now reported as 'recursion: ... sum of overlapping time'.
  Trace log messages are now flushed immediately.
  Reduced risk of crashes in embedded applications that don't handle PL_endav
    carefully, like current versions of mod_perl.

=head2 Changes in Devel::NYTProf 4.03 (svn 1316) 19th June 2010
